Replace local image paths with GitHub URLs

--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/91d44b7d-f7a7-46ef-acc0-47f1ad966f46" class="active">
+                    <img src="https://github.com/user-attachments/assets/0bd3db49-11b6-45c4-a350-b80b50aa6a14">
+                    <img src="https://github.com/user-attachments/assets/91ab5d88-1087-48a6-9b86-5eaa66001597">
+                    <img src="https://github.com/user-attachments/assets/09343d1f-469f-46fc-a06e-4e75182abe2b">
+                    <img src="https://github.com/user-attachments/assets/efdaebce-e62d-4f4d-b564-0132274a1497">
+                    <img src="https://github.com/user-attachments/assets/84f73579-68a5-400c-ba0a-f7922e51e835">
+                    <img src="https://github.com/user-attachments/assets/17d9fe0c-b038-4096-98e8-1fc21609a16f">
+                    <img src="https://github.com/user-attachments/assets/772a4445-53bf-4338-aa92-dd3daf24d58e">
+
                 </div>
 
                 <button class="slider-btn next">❯</button>
