--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Perguntas Frequentes</title>
 
 
     <!-- ICONES -->
@@ -19,7 +19,7 @@
 </a>
 
 <div class="faq-container">
-    <h1>Login por email e senha</h1>
+    <h1>Perguntas Frequentes</h1>
 
 <!-- TITULARIDADE SYMPLA -->
     <div class="faq-item">
