Update image sources in slider section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/892b7ebe-a9a4-4391-9fd5-69c80dbff9ff" class="active">
+                    <img src="https://github.com/user-attachments/assets/94934579-55c0-4beb-9cc4-f3316d37bcff">
+                     <img src="https://github.com/user-attachments/assets/d341562e-7bc1-4ee1-8092-1b612dabc9fe">
+                     <img src="https://github.com/user-attachments/assets/c219d9f1-0d96-4a07-b960-c908c080b598">
                 </div>
 
                 <button class="slider-btn next">❯</button>
