Replace local image paths with GitHub URLs

--- a/index.html
+++ b/index.html
@@ -103,8 +103,13 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/e24cdf74-fcd5-437a-8611-3f3bb872d2bb" class="active">
+                    <img src="https://github.com/user-attachments/assets/287668d2-9c4f-49b2-a679-2048ba40c84f">
+                    <img src="https://github.com/user-attachments/assets/46614c87-06fa-473f-b7d3-161093b980bf">
+                    <img src="https://github.com/user-attachments/assets/7b4b87bd-afa0-494b-8ea7-0cbbb34c7fbc">
+                    <img src="https://github.com/user-attachments/assets/afd1e4c7-609e-4cd6-ab1e-75890fd1b42">
+                    <img src="https://github.com/user-attachments/assets/50305140-fddb-436e-b0b6-5f37b321a957">
+
                 </div>
 
                 <button class="slider-btn next">❯</button>
