Replace local image paths with remote URLs

--- a/index.html
+++ b/index.html
@@ -164,8 +164,17 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/7874f028-8ab6-4cf8-8df3-a8c4b50997e9" class="active">
+                    <img src="https://github.com/user-attachments/assets/6c226368-0e68-4f45-b793-26962b1660aa">
+                     <img src="https://github.com/user-attachments/assets/909eb8a5-88a5-49fb-9faa-7f75f3246aa6">
+                     <img src="https://github.com/user-attachments/assets/0914c2d5-c1b4-4baf-90eb-20c3bf5e0be0">
+                     <img src="https://github.com/user-attachments/assets/519968b3-bc34-4c8c-92a0-90cdad689e0d">
+                     <img src="https://github.com/user-attachments/assets/b2d1337b-6ea0-444b-ad45-e9403c17a11a">
+                     <img src="https://github.com/user-attachments/assets/0b50dfeb-4f3c-4261-9e95-c70803447820">
+                     <img src="https://github.com/user-attachments/assets/4da56b65-a521-43b5-b7a3-0f9e3a6782ca">
+                     <img src="https://github.com/user-attachments/assets/09d6f34e-f205-4a5a-a2e2-f9a32d2cd6bd">
+                     <img src="https://github.com/user-attachments/assets/170dd492-c6b6-45c2-a3ef-4a03df0b6117">
+                     <img src="https://github.com/user-attachments/assets/2654d430-d9ca-4ed5-9f31-499c7e232212">
                 </div>
 
                 <button class="slider-btn next">❯</button>
