Replace local image paths with URLs in slider

--- a/index.html
+++ b/index.html
@@ -135,8 +135,15 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/1235a006-7ce6-470d-8bb4-3b549eb0898d" class="active">
+                    <img src="https://github.com/user-attachments/assets/e1a54774-0e30-4385-867c-1b18543d18e8">
+                    <img src="https://github.com/user-attachments/assets/755fe1a1-9edd-404b-af8d-6b1741bd7e07">
+                    <img src="https://github.com/user-attachments/assets/19216804-abbb-43e6-96e2-81fd503e2265">
+                    <img src="https://github.com/user-attachments/assets/541193cb-0fd9-471d-a6d3-10fa6c266940">
+                    <img src="https://github.com/user-attachments/assets/03a7d628-35fe-47a6-a0a8-74d8a76e6ad0">
+                    <img src="https://github.com/user-attachments/assets/0b2bb9ca-30fd-41e5-b6ce-b1b6dd425b5b">
+                    <img src="https://github.com/user-attachments/assets/ee36d07b-28f4-405a-b5c7-347764e3ea9b">
+                    <img src="https://github.com/user-attachments/assets/fbc4dad5-a81c-463a-a398-5afcf0552fe6">
                 </div>
 
                 <button class="slider-btn next">❯</button>
