Replace local image paths with GitHub URLs

--- a/index.html
+++ b/index.html
@@ -209,8 +209,14 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/2d6767c7-05d3-493b-969e-069a51fe1eb0" class="active">
+                    <img src="https://github.com/user-attachments/assets/489e17c7-adfd-46d4-abed-fcd3dd8f267e">
+                    <img src="https://github.com/user-attachments/assets/64dd9073-aa54-4a9a-a965-a44841f0323a">
+                    <img src="https://github.com/user-attachments/assets/f088ac18-3ba3-4276-8b5f-12e0d0807369">
+                    <img src="https://github.com/user-attachments/assets/0b46dea4-7453-456c-a872-1c411a9415a5">
+                    <img src="https://github.com/user-attachments/assets/49d619a0-b80c-4b94-a5e8-9832601f87cd">
+                    <img src="https://github.com/user-attachments/assets/8ad3f2c8-3dea-47d3-9a66-f2ee45f20327">
+                    <img src="https://github.com/user-attachments/assets/d774227d-9389-4a35-9955-7619c2f61511">
                 </div>
 
                 <button class="slider-btn next">❯</button>
