Update slider images to use URLs
Replaced local image paths with URLs for slider images.

--- a/index.html
+++ b/index.html
@@ -245,8 +245,14 @@
                 <button class="slider-btn prev">❮</button>
 
                 <div class="slider-images">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/01 (4).png" class="active">
-                    <img src="/Users/mateusmanoelcorreiadasilva98/Documents/Login - Email e senha/17 (2).png">
+                    <img src="https://github.com/user-attachments/assets/144801e9-d1a3-4e28-814b-a49792ba31c3" class="active">
+                    <img src="https://github.com/user-attachments/assets/f94917da-a13e-4a17-8f45-55d728264c19">
+                     <img src="https://github.com/user-attachments/assets/ff849eba-8cf3-47a0-b2aa-8b5523319dd7">
+                     <img src="https://github.com/user-attachments/assets/13250df1-08fa-41d1-8ed6-6338cd3a5592">
+                     <img src="https://github.com/user-attachments/assets/ecf52092-0d9c-4ccf-843d-3592367ec88a">
+                     <img src="https://github.com/user-attachments/assets/af0c0841-d990-468b-8482-600052a55a18">
+                     <img src="https://github.com/user-attachments/assets/3094b44f-79eb-4dba-8664-14166f3f750e">
+                     <img src="https://github.com/user-attachments/assets/5519d8db-161c-45b3-90fe-2a2af18bed47">
                 </div>
 
                 <button class="slider-btn next">❯</button>
