Add link to Sympla site in index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 Quando uma pessoa compra vários ingressos com o mesmo e-mail na Sympla, 
                 é necessário realizar a troca de titularidade. Essa ação deve ser feita exclusivamente pelo comprador,
                 basta seguir o passo a passo apresentado no tutorial a seguir.
+             <a href =" https://www.sympla.com.br/">Clique aqui para acessar o site da SYMPLA </a>
             </p>
 
             <section class="slider">
